--- a/style.css
+++ b/style.css
@@ -4,6 +4,23 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
 }
+a{
+    text-decoration: none;
+    color: #017185;
+}
+a:hover{
+    text-decoration: underline;
+    color: #c7511f;
+}
+/* @keyframes hoverBox{
+    from{
+        border: none;
+    }
+    to{
+        border: 1px solid #ffffff;
+        border-radius: 5px;
+    }
+} */
 
 .navbar{
     height: 60px;
@@ -11,7 +28,8 @@
     background-color: #0f1111;
     color: white;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
+    align-items: center;
 
 }
 .amalogo{
@@ -21,6 +39,11 @@
     padding: 4px 0px 0px;
     display: flex;
     align-items: center;
+}
+
+#amalogo:hover, .deliver:hover, #language:hover, #hemlo:hover, #Returns:hover, #cart:hover, .menuItem:hover, #menuAll:hover{
+    border: 1px solid #ffffff;
+    border-radius: 5px;
 }
 #logo{
     height: auto;
@@ -32,28 +55,88 @@
 .deliver{
     height: 60px;
     width: 88px;
-    margin: 0px 2px 5px 0px;
-    padding: 0px 9px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
 }
-#del{
-    font-size: 12px;
-    color: #cccccc;
-}
-#india{
+.boldf{
     font-size: 14px;
+    font-weight: bold;
+}
+.nonBoldF{
+    font-size: 12px;
 }
 #deliverText{
     height: 12px;
     margin-left: 37px;
-    padding-top: 12px;
+    /* padding-top: 12px; */
+    font-size: 12px;
+    color: #cccccc;
 }
 
 #locIcon{
     width: 65px;
-    padding-bottom: 12px;
-    padding-left: 10px;
+    /* padding-bottom: 12px;
+    padding-left: 10px; */
     display: flex;
     justify-content: space-evenly;
+    
+}
+.searchBar{
+    display: flex;
+    justify-content: center;
+}
+#searchBar{
+    width: 52px;
+    height: 40px;
+    border: none;
+    background-color: #e6e6e6;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    text-align: center;
+}
+#search{
+    height: 37.75px;
+    width: 700px;
+    color: gray;
+    border: none;
+    font-weight: 500;
+    padding-left: 10px;
+}
+#searchIcon{
+    height: 40px;
+    width: 42px;
+    background-color: #febd69;
+    border: none;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+#language{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#flag{
+    height: 16px;
+    width: 21px;
+    background-image: url(/icons/american\ flag.webp);
+    background-size: cover;
+}
+#langbut{
+    height: 50px;
+    width: 55px;
+    background-color: transparent;
+    color: white;
+    font-weight: 900;
+    border: none;
+}
+#cart{
+    height: 45px;
+    width: 80px;
+    background-image: url(/icons/Screenshot\ 2024-05-15\ at\ 1.25.40\ AM.png);
+    background-size: cover;
 }
 
 
@@ -108,7 +191,7 @@
     margin-bottom: 10px;
 }
 .recBox1{
-    width: 300px;
+    width: 320px;
     height: 350px;
     background-color: white;
     padding: 20px;
@@ -123,23 +206,133 @@
 h2{
     font-size: 21px;
 }
+
+.fourImage{
+    margin-top: 7px;
+    height: 290px;
+    /* background-color: #cccccc; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: space-between;
+}
+.fourim{
+    height: 120px;
+    width: 135px;
+    background-color: #CC0D39;
+    object-fit: cover;
+}
+
 .singleImage{
     margin-top: 7px;
     height: 290px;
     width: 300px;
+    object-fit: cover;
 }
 .shopnow{
     position: relative;
     top: 12px;
     text-decoration: none;
 }
+#discount{
+    background-color: #CC0D39;
+    color: white;
+    font-size: 12px;
+    padding: 6px;
+    width: fit-content;
+    flex-wrap: wrap;
+}
 .recBox2{
-    height: 366px;
+    height: 310px;
     width: 1342px;
     padding: 20px;
     margin: 10px;
     background-color: white;
 }
+.recBox21{
+    height: 280px;
+    width: 1342px;
+    padding: 20px;
+    margin: 10px;
+    background-color: white;
+}
+.prod{
+    margin-top: 25px;
+    margin-right: 15px;
+    /* width: 156px;
+    height: 200px; */
+    height: 200px;
+    background-color: #222F3E;
+}
+#prod1{
+    width: 156px;
+    background-image: url(/images/1.jpeg);
+    background-size: contain;
+}#prod2{
+    width: 92px;
+    background-image: url(/images/2.jpeg);
+    background-size: contain;
+}#prod3{
+    width: 103px;
+    background-image: url(/images/3.jpeg);
+    background-size: contain;
+}#prod4{
+    width: 194px;
+    background-image: url(/images/4.jpeg);
+    background-size: contain;
+}#prod5{
+    width: 53px;
+    background-image: url(/images/5.jpeg);
+    background-size: contain;
+}#prod6{
+    width: 90px;
+    background-image: url(/images/6.jpeg);
+    background-size: contain;
+}#prod17{
+    width: 82px;
+    background-image: url(/images/7.jpeg);
+    background-size: contain;
+}#prod8{
+    width: 249px;
+    background-image: url(/images/8.jpeg);
+    background-size: contain;
+}
+.book{
+    margin-top: 10px;
+    margin-right: 15px;
+    width: 170px;
+    height: 260px;
+    background-color: #222F3E;
+}
+
+#bookBox{
+    display: flex;
+    justify-content: space-evenly;
+}
+#book1{
+    background-image: url(/images/book1.jpeg);
+    background-size: contain;
+}#book2{
+    background-image: url(/images/book2.jpeg);
+    background-size: contain;
+}#book3{
+    background-image: url(/images/book3.jpeg);
+    background-size: contain;
+}#book4{
+    background-image: url(/images/book4.jpeg);
+    background-size: contain;
+}#book5{
+    background-image: url(/images/book5.jpeg);
+    background-size: contain;
+}#book6{
+    background-image: url(/images/book6.jpg);
+    background-size: contain;
+}
+#book7{
+    background-image: url(/images/book7.jpeg);
+    background-size: contain;
+}
+
 .signIn{
     /* position: absolute; */
     background-color: white;
@@ -176,11 +369,16 @@ h2{
     align-items: center;
     text-decoration: none;
 }
+.top:hover{
+    background-color: #485769;
+    color: white;
+    text-decoration: none;
+}
 
 .blahh{
     position: relative;
     width: 100%;
-    height: 500px;
+    height: 1000px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -207,13 +405,6 @@ h4{
     padding: 5px;
     color: #dddddd;
 }
-#lineBreak{
-    position: absolute;
-    bottom: 120px;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
-    height: 0.1px;
-}
 
 .butts{
     height: 35px;
@@ -229,4 +420,72 @@ h4{
 #buttons{
     margin: 10px;
     margin-left: 100px;
+}
+#line{
+    height: 0.1px;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.lowestBlah{
+    height: 400px;
+    width: 100%;
+    background-color: #0f1111;
+    bottom: 0px;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 105px;
+}
+#footerDiv{
+    width: 80%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-top: 40px;
+    margin-bottom: none;
+}
+.footerTexts{
+    width: 100px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+}
+.footHead{
+    color: #dddddd;
+    font-size: 12px;
+    text-decoration: none;
+    font-weight: bold;
+}
+.footText{
+    color: #999999;
+    font-size: 12px;
+    text-decoration: none;
+    text-transform: capitalize;
+}
+.footAnchor:hover{
+    text-decoration: white underline;
+}
+#lastLast{
+    background-color: #0f1111;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#last{
+    display: flex;
+    width: 55%;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    background-color: #0f1111;
+    padding-top: 25px;
+    margin: none;
+}
+#pakkaLast{
+    background-color: #0f1111;
+    /* text-align: center; */
+    /* height: 60px; */
+    padding: 10px;
+    padding-bottom: 40px;
+    margin: none;
 }
